// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Keyword 1`] = `
<strong
  className="ola_keyword"
>
  <span
    className="ola_keyword-text"
  >
    Test
  </span>
</strong>
`;

exports[`Keyword with button 1`] = `
<strong
  className="ola_keyword test"
>
  <span
    className="ola_keyword-text"
  >
    Test
  </span>
  <span
    className="ola_keyword-button"
  >
    <button
      className="ola_button_icon is-normal"
      disabled={false}
      style={
        Object {
          "--base-color": "var(--color-neutral-500)",
          "--busy-color": "var(--color-neutral-600)",
          "--disabled-color": "var(--color-neutral-300)",
          "--shadow-focus": "var(--shadow-focus-neutral)",
        }
      }
    >
      <svg
        className="ola_icon is-medium"
        fillRule="evenodd"
        height="28"
        viewBox="0 0 28 28"
        width="28"
      >
        <path
          d="M22.92 4c.296 0 .55.105.762.314.212.21.318.462.318.758s-.106.55-.318.762l-8.17 8.174 8.17 8.166c.212.212.318.464.318.754 0 .296-.106.549-.318.758-.212.21-.466.314-.762.314s-.547-.103-.753-.31l-8.171-8.166-8.163 8.166c-.206.207-.46.31-.761.31a1.04 1.04 0 0 1-.758-.31A1.02 1.02 0 0 1 4 22.936c0-.301.103-.555.31-.762l8.17-8.166-8.17-8.174A1.026 1.026 0 0 1 4 5.08c0-.296.105-.55.314-.762.21-.212.462-.318.758-.318.295 0 .55.106.761.318l8.163 8.174 8.17-8.174A1.03 1.03 0 0 1 22.92 4z"
        />
      </svg>
    </button>
  </span>
</strong>
`;

exports[`Keyword with extraClass 1`] = `
<strong
  className="ola_keyword test"
>
  <span
    className="ola_keyword-text"
  >
    Test
  </span>
</strong>
`;
